--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -22,8 +22,8 @@
   }
 .bodyStyle
 {  
-    text-align: center;
-    background-color:black;
+    text-align: center; background-image: linear-gradient(to bottom right, black,  rgb(36, 3, 51));
+    /* background-color:black; */
 }
 .container
 {
@@ -50,13 +50,10 @@
 @keyframes typing {
     from {width: 0}
 }
-.lightMode
-{
 
-}
-button{
+.buttonMode{
     font-family: myFont;
-    background-color: rgb(103, 231, 103);
+    background-color: #00ffff;
     color: black;
     text-decoration: none;
     font-size: 1.5em;
@@ -66,13 +63,13 @@ button{
     border-radius: 5px;
     transition: .5s;
 }
-button:hover{
+.buttonMode:hover{
     background: var(--clr);
     letter-spacing: .2em;
     box-shadow: 0 0 35px 5;
 }
 img{
-    width: 200px;
+    width: 100px;
 }
 .wrapper
 {
@@ -109,12 +106,36 @@ img{
 }
 .content:hover > *{
     transform: translateY(25px);
+    
 }
-a:hover
+.steamIcon:hover
 {   
     transition: .5s;
-    opacity:50%;    
+    opacity: 35% ;
+    
 }
+.steamIcon{
+    padding: 15px;
+}
+.ignList
+{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px;
+    margin-left:39%;
+}
+.ignItem{
+    border: 1px solid #00ffff;
+    padding: 10px;
+    border-radius: 5px;
+    width: calc(33.333% - 40px);
+    box-shadow: 0 2px 5px rgba(0,0,0,0.6);
+    text-align: center;
+    color:#00ffff;
+    font-family: myFont;
+}
+
+
 
 
 
