--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -10,14 +10,14 @@
     text-align: center;
     -webkit-animation: glow 1s ease-in-out infinite alternate;
     -moz-animation: glow 1s ease-in-out infinite alternate;
-    animation: glow 1s ease-in-out infinite alternate;
+    animation: glow .4s ease-in-out infinite alternate;
 }
 @-webkit-keyframes glow {
     from {
-      text-shadow: 0 0 20px #00ffff;
+      text-shadow: 0 0 10px #54b8b8;
     }
     to {
-      text-shadow: 0 0 30px #00ffff;
+      text-shadow: 0 0 20px #54b8b8;
     }
   }
 .bodyStyle
@@ -36,7 +36,22 @@
     font-size: 1em;
     letter-spacing: 10px;
     font-family: myFont;
-    border-right: 3px solid;
+    border-right: 2px solid;
+    width:100%;
+    white-space: nowrap;
+    overflow: hidden;
+    animation:
+        typing 2s,
+        cursor.4s step-end infinite alternate;
+}
+.randomBodyDone
+{
+    text-align: center;
+    color:aqua;
+    font-size: 1em;
+    letter-spacing: 10px;
+    font-family: myFont;
+    /* border-right: 3px solid; */
     width:100%;
     white-space: nowrap;
     overflow: hidden;
@@ -124,13 +139,14 @@ img{
     display: flex;
     flex-wrap: wrap;
     padding: 20px;
-    margin-left:39%;
+    /* margin-left:39%; */
 }
 .ignItem{
+    margin:auto auto;
     border: 1px solid #00ffff;
     padding: 10px;
     border-radius: 5px;
-    width: calc(33.333% - 40px);
+    width: 273px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.6);
     text-align: center;
     color:#00ffff;
