--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -6,7 +6,7 @@
 {
     font-family: myFont;
     font-size: 80px;
-    color: aqua;
+    color: #adffff;
     text-align: center;
     -webkit-animation: glow 1s ease-in-out infinite alternate;
     -moz-animation: glow 1s ease-in-out infinite alternate;
@@ -20,10 +20,30 @@
       text-shadow: 0 0 20px #54b8b8;
     }
   }
+body{
+    min-height: 100vh;
+    background: #0c192c;
+}
+
 .bodyStyle
 {  
-    text-align: center; background-image: linear-gradient(to bottom right, black,  rgb(36, 3, 51));
+    text-align: center;
+    background: linear-gradient(45deg,rgb(52, 2, 76),rgb(52, 5, 74),rgb(36, 3, 51),#0c0000);
+    background-size: 300% 300%;
+    animation: color 11s ease-in-out infinite;
+    /* background-image: linear-gradient(to bottom right, black,  rgb(36, 3, 51)); */
     /* background-color:black; */
+}
+@keyframes color{
+    0%{
+        background-position: 0 50%;
+    }
+    50%{
+        background-position: 100% 50%;
+    }
+    100%{
+        background-position: 0 50%;
+    }
 }
 .container
 {
@@ -32,10 +52,10 @@
 .randomBody
 {
     text-align: center;
-    color:aqua;
-    font-size: 1em;
-    letter-spacing: 10px;
-    font-family: myFont;
+    color: #adffff;
+    font-size: 19px;
+    letter-spacing: 4px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border-right: 2px solid;
     width:100%;
     white-space: nowrap;
@@ -47,10 +67,10 @@
 .randomBodyDone
 {
     text-align: center;
-    color:aqua;
-    font-size: 1em;
-    letter-spacing: 10px;
-    font-family: myFont;
+    color: #adffff;
+    font-size: 19px;
+    letter-spacing: 4px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     /* border-right: 3px solid; */
     width:100%;
     white-space: nowrap;
@@ -67,7 +87,7 @@
 }
 
 .buttonMode{
-    font-family: myFont;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #00ffff;
     color: black;
     text-decoration: none;
@@ -80,6 +100,7 @@
 }
 .buttonMode:hover{
     background: var(--clr);
+    color: var(--colr);
     letter-spacing: .2em;
     box-shadow: 0 0 35px 5;
 }
@@ -142,16 +163,19 @@ img{
     /* margin-left:39%; */
 }
 .ignItem{
+    font-size: 18px;
+    text-decoration: none;
     margin:auto auto;
-    border: 1px solid #00ffff;
+    border: 2.2px solid #adffff;
     padding: 10px;
     border-radius: 5px;
     width: 273px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.6);
     text-align: center;
-    color:#00ffff;
-    font-family: myFont;
+    color:#adffff;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 
 
 
