--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -20,10 +20,6 @@
       text-shadow: 0 0 20px #54b8b8;
     }
   }
-body{
-    min-height: 100vh;
-    background: #0c192c;
-}
 
 .bodyStyle
 {  
@@ -55,7 +51,7 @@ body{
     color: #adffff;
     font-size: 19px;
     letter-spacing: 4px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:sans-serif;
     border-right: 2px solid;
     width:100%;
     white-space: nowrap;
@@ -70,7 +66,7 @@ body{
     color: #adffff;
     font-size: 19px;
     letter-spacing: 4px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: sans-serif;
     /* border-right: 3px solid; */
     width:100%;
     white-space: nowrap;
@@ -87,7 +83,7 @@ body{
 }
 
 .buttonMode{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: sans-serif;
     background-color: #00ffff;
     color: black;
     text-decoration: none;
@@ -99,6 +95,8 @@ body{
     transition: .5s;
 }
 .buttonMode:hover{
+    text-decoration: none;
+    cursor: pointer;
     background: var(--clr);
     color: var(--colr);
     letter-spacing: .2em;
@@ -173,7 +171,7 @@ img{
     box-shadow: 0 2px 5px rgba(0,0,0,0.6);
     text-align: center;
     color:#adffff;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:sans-serif;
 }
 
 
