--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -24,13 +24,13 @@
 .bodyStyle
 {  
     text-align: center;
-    background: linear-gradient(45deg,rgb(52, 2, 76),rgb(52, 5, 74),rgb(36, 3, 51),#0c0000);
+    /* background: linear-gradient(45deg,rgb(52, 2, 76),rgb(52, 5, 74),rgb(36, 3, 51),#0c0000);
     background-size: 300% 300%;
-    animation: color 11s ease-in-out infinite;
-    /* background-image: linear-gradient(to bottom right, black,  rgb(36, 3, 51)); */
+    animation: color 11s ease-in-out infinite; */
+    background-image: linear-gradient(to bottom right, black,  rgb(51, 3, 3));
     /* background-color:black; */
 }
-@keyframes color{
+/* @keyframes color{
     0%{
         background-position: 0 50%;
     }
@@ -40,7 +40,7 @@
     100%{
         background-position: 0 50%;
     }
-}
+} */
 .container
 {
     display: inline-block;
