--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -102,7 +102,7 @@
     letter-spacing: .2em;
     box-shadow: 0 0 35px 5;
 }
-img{
+.clickables{
     width: 100px;
 }
 .wrapper
@@ -176,6 +176,64 @@ img{
 
 
 
+.disc{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    animation: animate 5.5s linear infinite;
+}
+@keyframes animate {
+    from {
+        transform: rotate(0deg);
+    }
+     to{
+        transform: rotate(360deg);
+     }
+}
+.disc:after{
+    content:'';
+    position: absolute;
+    top: 35px;
+    right:35px;
+    bottom: 35px;
+    left: 35px;
+    border-radius: 50%;
+}
+.slider{
+    position: relative;
+    width: 100%;
+    height: 370px;
+    overflow: hidden;
+}
+.item {
+    font-family: sans-serif;
+    text-align: center;
+    position: absolute;
+    color:#adffff;
+    width: 200px;
+    height: 320px;
+    background-color:linear-gradient(to bottom right, black,  rgb(50, 3, 51));
+    border-radius: 10px;
+    padding: 20px;
+    transition: 0.5s;
+    left: calc(50% - 110px);
+    top: 0;
+}
+#next, #prev{
+    position: absolute;
+    top: 40%;
+    color: #00ffff;
+    background-color: transparent;
+    border: none;
+    font-size: xxx-large;
+    font-family: monospace;
+    font-weight: bold;
+    left: 400px;
+}
+#next{
+    left: unset;
+    right: 400px;
+}
 
 
 
